[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/fonts/FiraGO-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://gui/towerpanel/TowerPanel.gd" type="Script" id=2]
[ext_resource path="res://gui/mainmenu/MainMenu3.tres" type="StyleBox" id=3]
[ext_resource path="res://gui/mainmenu/MainMenu1.tres" type="StyleBox" id=4]
[ext_resource path="res://gui/mainmenu/MainMenu2.tres" type="StyleBox" id=5]

[sub_resource type="DynamicFont" id=1]
size = 14
use_filter = true
font_data = ExtResource( 1 )

[node name="TowerPanel" type="Node2D"]
light_mask = 0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
light_mask = 0
margin_right = 250.0
margin_bottom = 720.0
rect_min_size = Vector2( 250, 195 )
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
light_mask = 0
margin_left = 39.8936
margin_top = 320.456
margin_right = 223.894
margin_bottom = 472.456
rect_min_size = Vector2( 100, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Panel/VBoxContainer"]
light_mask = 0
margin_right = 184.0
margin_bottom = 14.0
rect_min_size = Vector2( 115, 0 )
text = "Name: "

[node name="ExpLabel" type="Label" parent="Panel/VBoxContainer"]
light_mask = 0
margin_top = 18.0
margin_right = 184.0
margin_bottom = 32.0
rect_min_size = Vector2( 115, 0 )
text = "Exp:"

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 36.0
margin_right = 184.0
margin_bottom = 40.0

[node name="DamageLabel" type="Label" parent="Panel/VBoxContainer"]
light_mask = 0
margin_top = 44.0
margin_right = 184.0
margin_bottom = 58.0
text = "Damage:"

[node name="RadiusLabel" type="Label" parent="Panel/VBoxContainer"]
light_mask = 0
margin_top = 62.0
margin_right = 184.0
margin_bottom = 76.0
text = "Radius:"

[node name="ReloadTimeLabel" type="Label" parent="Panel/VBoxContainer"]
light_mask = 0
margin_top = 80.0
margin_right = 184.0
margin_bottom = 94.0
text = "Reload time:"

[node name="PierceLabel" type="Label" parent="Panel/VBoxContainer"]
light_mask = 0
margin_top = 98.0
margin_right = 184.0
margin_bottom = 112.0
text = "Pierce:"

[node name="SlowLabel" type="Label" parent="Panel/VBoxContainer"]
margin_top = 116.0
margin_right = 184.0
margin_bottom = 130.0
text = "Slow: "

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel"]
light_mask = 0
margin_left = 33.0
margin_top = 556.0
margin_right = 249.0
margin_bottom = 606.0
rect_min_size = Vector2( 115, 0 )

[node name="RequiredLabel" type="Label" parent="Panel/VBoxContainer2"]
light_mask = 0
margin_right = 216.0
margin_bottom = 14.0
text = "Required:"
__meta__ = {
"_edit_lock_": true
}

[node name="ExpRequiredLabel" type="Label" parent="Panel/VBoxContainer2"]
light_mask = 0
margin_top = 18.0
margin_right = 216.0
margin_bottom = 32.0
text = "Exp:"
__meta__ = {
"_edit_lock_": true
}

[node name="GoldRequiredLabel" type="Label" parent="Panel/VBoxContainer2"]
light_mask = 0
margin_top = 36.0
margin_right = 216.0
margin_bottom = 50.0
text = "Gold:"
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Panel"]
light_mask = 0
margin_left = 13.7294
margin_top = 618.441
margin_right = 237.729
margin_bottom = 698.441
rect_min_size = Vector2( 115, 50 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Upgrade Tower"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
margin_left = 26.0765
margin_top = 31.123
margin_right = 229.077
margin_bottom = 290.123
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="."]
margin_left = 189.524
margin_top = 323.094
margin_right = 219.524
margin_bottom = 353.094
rect_min_size = Vector2( 30, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TweenO" type="Tween" parent="."]

[node name="TweenC" type="Tween" parent="."]
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="tween_completed" from="TweenO" to="." method="_on_TweenO_tween_completed"]
[connection signal="tween_completed" from="TweenC" to="." method="_on_TweenC_tween_completed"]
